WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15383
resize: vertical does not restrict to vertical resize
https://bugs.webkit.org/show_bug.cgi?id=15383
Summary
resize: vertical does not restrict to vertical resize
Eric Seidel (no email)
Reported
2007-10-05 15:40:09 PDT
resize: vertical does not restrict to vertical resize This seems easy to fix. It could just effectively do max-width: current width. The example is taken from another bug I'm filing. But you should only be able to resize the div vertically.
Attachments
Ignore movement along the non-resizing axis
(5.23 KB, patch)
2009-06-21 13:52 PDT
,
mitz
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jan Boeijink
Comment 1
2007-11-21 01:10:07 PST
Horizontal restriction is broken as well.
mitz
Comment 2
2008-01-10 18:24:16 PST
<
rdar://problem/5682745
>
mitz
Comment 3
2008-05-21 18:15:54 PDT
***
Bug 19170
has been marked as a duplicate of this bug. ***
Chris Suter
Comment 4
2008-05-28 21:15:58 PDT
It's possible to workaround this bug in some circumstances by setting setting the max-width attribute. However, this doesn't work if you use %ages. Setting max-width to 100%, say, will cause the computed max-width to end up as none. I'm not sure if this is another bug or not.
mitz
Comment 5
2009-06-21 13:52:50 PDT
Created
attachment 31620
[details]
Ignore movement along the non-resizing axis
mitz
Comment 6
2009-06-21 13:57:29 PDT
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/44914
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug