WebCore:

Reviewed by Sam Weinig.

        - fix https://bugs.webkit.org/show_bug.cgi?id=15383
          <rdar://problem/5682745> resize: vertical does not restrict to vertical
          resize

        Test: fast/css/resize-single-axis.html

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::resize): Ignore movement along the non-resizing
        axis.

LayoutTests:

        Reviewed by Sam Weinig.

        - test for https://bugs.webkit.org/show_bug.cgi?id=15383
          <rdar://problem/5682745> resize: vertical does not restrict to vertical
          resize

        * fast/css/resize-single-axis-expected.txt: Added.
        * fast/css/resize-single-axis.html: Added.



Canonical link: https://commits.webkit.org/36726@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44914 268f45cc-cd09-0410-ab3c-d52691b4dbfc